fixed table pagination & index page

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,9 +15,9 @@ block content
             .column.is-6-desktop.is-7-fullhd.is-hidden-tablet.mt-5
               img.hero-illustration(src="heroIllustrationMobile.svg")
             .column
-              p.title.is-size-3-mobile.is-size-2-tablet
+              p.title.is-size-4-mobile.is-size-2-tablet.has-text-centered-mobile
                 | Reducing food waste!
-              p.subtitle.is-size-6-mobile.is-size-5-tablet
+              p.subtitle.is-size-6-mobile.is-size-5-tablet.has-text-centered-mobile
                 | Pantree is a web app focused on reducing food waste.
                 | Our goal is to establish a strong link between community fridges and local food businesses and help save food which would otherwise go to waste.
               button.button.is-primary.is-large.is-hidden-touch.nav__link(data-section="#about") Discover more
@@ -81,7 +81,7 @@ block content
   section.section
     .container.is-widescreen
       figure.image.is-16by9.video
-        video(class="has-ratio" poster="thumbnail.png" controls)
+        video(class="has-ratio"  width='400px' poster="thumbnail.png" controls)
           source(src='pantree-trailer-final.mp4' type='video/mp4')
           source(src='pantree-trailer-final.webm' type='video/webm')
           | Your browser does not support the video tag.
