--- a/views/mixins/_editEstablishmentForm.pug
+++ b/views/mixins/_editEstablishmentForm.pug
@@ -1,7 +1,7 @@
 include _workingHoursInput
 
 mixin editEstablishmentForm()
-    .columns.is-centered.is-vcentered.is-full-height
+    .columns.is-centered.is-vcentered
         .column.is-full-touch.is-three-quarters-desktop.is-three-fifths-widescreen
             .card
                 .card-content
